--- a/about.html
+++ b/about.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
 </head>
+
 <body>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur obcaecati dicta dolorem atque laborum porro ratione reiciendis nulla maiores vitae beatae eveniet deleniti, dolor, accusantium, ullam sunt quibusdam corporis optio.
+    <h1>About</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur obcaecati dicta dolorem atque laborum porro
+        ratione reiciendis nulla maiores vitae beatae eveniet deleniti, dolor, accusantium, ullam sunt quibusdam
+        corporis optio.</p>
+    <p>lorem</p>
+    <h1>About</h1>
 </body>
+
 </html>
